--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
 <BODY>
    <H1>Hi</H1>
    <P>This is very minimal "hello world" HTML document.</P> 
+   <P>Now let's add a link.</P>
+   <P>Click <a href="http://www.w3schools.com">here.</a></P>
 </BODY>
 </HTML>
