--- a/index.html
+++ b/index.html
@@ -10,5 +10,7 @@
    <P>This is very minimal "hello world" HTML document.</P> 
    <P>Now let's add a link.</P>
    <P>Click <a href="http://www.w3schools.com">here.</a></P>
+   <P>Now a local link.</P>
+   <P>Click <a href="page1">
 </BODY>
 </HTML>
