--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
    <P>Now let's add a link.</P>
    <P>Click <a href="http://www.w3schools.com">here.</a></P>
    <P>Now a local link.</P>
-   <P>Click <a href="http://gonzocher.github.io/page1">here.</a><P>
+   <P>Click <a href="/page1">here.</a><P>
 </BODY>
 </HTML>
