--- a/index.html
+++ b/index.html
@@ -12,5 +12,7 @@
    <P>Click <a href="http://www.w3schools.com">here.</a></P>
    <P>Now a local link.</P>
    <P>Click <a href="/page1.htm">here now.</a><P>
+   <P>Can we add some javascript?</P>
+   <script>rect(80, 70, 60, 240);</script>
 </BODY>
 </HTML>
