--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
    <P>Click <a href="/page1.htm">here now.</a><P>
    <P>Can we add some javascript?</P>
    
-
+<canvas id="rectangle" width="300" height="300"></canvas>
  
       
       
