--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
    <P>Now let's add a link.</P>
    <P>Click <a href="http://www.w3schools.com">here.</a></P>
    <P>Now a local link.</P>
-   <P>Click <a href="/page1.htm">here now.</a><P>
+   <P>Click <a href="/page1.htm">here.</a><P>
    <P>Can we add some javascript?</P>
    
 <canvas id="basic-canvas" width="200" height="300"></canvas>
