--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       
       context.fillStyle = "rgb(150,29,28)";
       context.fillRect (2,2,96,96);
-      <canvas id="draw-square" width="100" height="100"></canvas>
+      <canvas id="drawsquare" width="100" height="100"></canvas>
       
     } else {
       // put code for browsers that don't support canvas here
