Add theme, minor changes

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <HTML>
    <HEAD>
       <TITLE>
-         A Small Hello 
+         Budding Coder or Coding Buddy (one of the two) 
       </TITLE>
        
    </HEAD>
