--- a/index.html
+++ b/index.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
 <HTML>
    <HEAD>
-      <TITLE>
-         Budding Coder or Coding Buddy (one of the two) 
+      <TITLE>Budding Coder
       </TITLE>
        
    </HEAD>
 <body>
-   <H1>Hi</H1>
+   <H1>Budding Coder or Coding Buddy (one of the two)</H1>
    <P>This is very minimal "hello world" HTML document.</P> 
    <P>Now let's add a link.</P>
    <P>Click <a href="http://www.w3schools.com">here.</a></P>
