--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
    <P>Click <a href="http://www.w3schools.com">here.</a></P>
    <P>Now a local link.</P>
    <P>Click <a href="/page1.htm">here.</a><P>
+   <P>Click <a href="/page2.htm">here.</a><P>
    <P>Can we add some javascript?</P>
    
 
