Reverting back to original code

--- a/index.html
+++ b/index.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
 <HTML>
    <HEAD>
-      <TITLE>Budding Coder
+      <TITLE>
+         A Small Hello 
       </TITLE>
        
    </HEAD>
 <body>
-   <H1>Budding Coder or Coding Buddy (one of the two)</H1>
+   <H1>Hi</H1>
    <P>This is very minimal "hello world" HTML document.</P> 
    <P>Now let's add a link.</P>
    <P>Click <a href="http://www.w3schools.com">here.</a></P>
    <P>Now a local link.</P>
    <P>Click <a href="/page1.htm">here.</a><P>
-   <P>Click <a href="/page2.htm">here.</a><P>
    <P>Can we add some javascript?</P>
    
 
