--- a/page1.htm
+++ b/page1.htm
@@ -1,2 +1,10 @@
-# My First Heading #
-*My first paragraph with a change.*
+<!DOCTYPE html>
+<html>
+<body>
+
+<h1>My First Heading</h1>
+
+<p>My first paragraph.</p>
+
+</body>
+</html>
