--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Testing html</title>
+    <title>Kids Coding World</title>
     <link rel="stylesheet" href="stylesheet.css">
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
   </head>
@@ -21,7 +21,7 @@
       <div class="container">
         <h1>LEARN TO CODE.</h1>
         <h1>LEARN TO BE CREATIVE.</h1>
-        <p>Progate is a web service where you can learn programming online.</p>
+        <p>Kids Coding World is where kids can learn programming online.</p>
         <p>We offer you a fully equipped coding environment to get you started.</p>
         <div class="btn-wrapper">
           <a href="#" class="btn signup">Sign up with Email</a>
